bitfield/tests/04-multiple-of-8bits.stderr
error[E0277]: the trait bound `SevenMod8: MultipleOf8` is not satisfied
  --> tests/04-multiple-of-8bits.rs:53:1
   |
53 | #[bitfield]
   | ^^^^^^^^^^^ the trait `MultipleOf8` is not implemented for `SevenMod8`
   |
   = help: the trait `MultipleOf8` is implemented for `ZeroMod8`
note: required by a bound in `check_mod`
  --> src/lib.rs
   |
   |     pub fn check_mod<T: CheckMod8>() -> u32
   |            --------- required by a bound in this function
   |     where
   |         T::Num: MultipleOf8,
   |                 ^^^^^^^^^^^ required by this bound in `check_mod`
   = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
